--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ bevy = "0.8"
 lyon = "1.0"
 rand = "0.8"
 bevy-inspector-egui = "0.12"
+serde = { version = "1", features = ["derive"] }
+obj-exporter = "0.2.0"
+bevy_obj = "0.8"
+serde_json = "1.0.59"
