--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1", features = ["derive"] }
 obj-exporter = "0.2.0"
 bevy_obj = "0.8"
 serde_json = "1.0.59"
+bevy_easings = "0.8"
