--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,18 @@ name = "shapeshifter"
 version = "0.1.0"
 edition = "2021"
 
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+shapeshifter_level_maker = {path = "crates/shapeshifter_level_maker"}
 bevy = "0.8"
-lyon = "1.0"
-rand = "0.8"
-bevy-inspector-egui = "0.12"
-serde = { version = "1", features = ["derive"] }
-obj-exporter = "0.2.0"
-bevy_obj = "0.8"
-serde_json = "1.0.59"
-bevy_easings = "0.8"
-rfd = "0.10"
+# lyon = "1.0"
+# rand = "0.8"
+# bevy-inspector-egui = "0.12"
+# serde = { version = "1", features = ["derive"] }
+# obj-exporter = "0.2.0"
+# bevy_obj = "0.8"
+# serde_json = "1.0.59"
+# bevy_easings = "0.8"
+# rfd = "0.10"
