--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ lyon = "1.0"
 # serde_json = "1.0.59"
 # bevy_easings = "0.8"
 # rfd = "0.10"
+
+[patch.crates-io]
+wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }
